--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -11,7 +11,7 @@
 @media screen and (min-width: 768px) {
     .photo-grid {
         grid-template-columns: repeat(2, 1fr);
-        width: calc(100% - 48px);
+        width: calc(100% - 48px);}
 }
 
 
